--- a/FlOpEDT/templates/base.html
+++ b/FlOpEDT/templates/base.html
@@ -82,7 +82,9 @@
       <li><a href="{% url "ics:index" department %}">iCal</a></li>
       <li><a href="{% url "base:aide" department %}">Aide</a></li>
       <li><a href="{% url "base:contact" department %}">Contact</a></li>
+      {% if user.is_authenticated %}
       <li><a href="{% url "base:heure_sup" department %}">Heure supplémentaire</a></li>
+      {% endif %}
       {% if user.is_superuser or user.is_staff and has_department_perm %}
       <li><a href="{% url "solve_board:main_board" department %}">Générer</a></li>
       <li><a href="{% url "base:statistics" department %}">Statistiques</a></li>
