--- a/FlOpEDT/base/templates/base/edt-base.html
+++ b/FlOpEDT/base/templates/base/edt-base.html
@@ -33,9 +33,9 @@
 <link rel="stylesheet" href="{% static 'base/better.css' %}?7" />
 <script src="{% static 'base/d3.v4.min.js' %}"></script>
 <script>
-    var groupes_fi = "{% url "base:fetch_groups" department %}";
-    var rooms_fi = "{% url "base:fetch_rooms" department %}";
-    var constraints_fi = "{% url "base:fetch_constraints" department %}";
+    var groupes_fi = "{% url 'api:groups:group-tree' %}";
+    var rooms_fi = "{% url 'api:rooms:all-list' %}";
+    var constraints_fi = "{% url 'api:fetch:constraints-list' %}";
     var departments_fi = "{% url "base:fetch_departments" department %}";
     
     var url_module = "{% url 'api:course:module-list' %}";
