--- a/FlOpEDT/base/templates/base/edt-base.html
+++ b/FlOpEDT/base/templates/base/edt-base.html
@@ -36,7 +36,7 @@
     var groupes_fi = "{% url 'api:groups:group-tree' %}";
     var rooms_fi = "{% url 'api:rooms:all-list' %}";
     var constraints_fi = "{% url 'api:fetch:constraints-list' %}";
-    var departments_fi = "{% url "base:fetch_departments" department %}";
+    var departments_fi = "{% url 'api:base:department-list' %}";
     
     var url_module = "{% url 'api:course:module-list' %}";
     var url_tutor = "{% url 'api:tutor-list' %}";
@@ -48,15 +48,17 @@
     var url_quote = "{% url 'api:extra:random-quote-list' %}";
 
     var url_cours_pp = "{% url 'api:fetch:unscheduledcourses-list' %}";
+    var url_weekdays = "{% url 'api:fetch:weekdays-list' %}";
 
+    // Redirection
     var url_contact = "{% url "base:contact" department %}";
     var url_login = "{% url "people:login" %}";
     var url_edt = "{% url "base:edt" department %}";
 
-    var url_cours_pl = "{% url "base:fetch_cours_pl" department 0 0 0 %}";
-    url_cours_pl = url_cours_pl.slice(0, -5);
+    var url_cours_pl = "{% url 'api:fetch:scheduledcourses-list' %}";
+    // url_cours_pl = url_cours_pl.slice(0, -5);
 
-    var url_unavailable_rooms = "{% url "api:fetch:unavailablerooms-list"%}";
+    var url_unavailable_rooms = "{% url 'api:fetch:unavailablerooms-list' %}";
     url_unavailable_rooms = url_unavailable_rooms.slice(0,-3);
 
     var url_edt_changes = "{% url "base:edt_changes" department %}";
