Refactoring js app

--- a/FlOpEDT/base/static/base/css/header.css
+++ b/FlOpEDT/base/static/base/css/header.css
@@ -257,7 +257,7 @@ body {
 .loader {
 position : fixed;
 z-index: 9999;
-background : rgba(0,0,0,0.6) url('logo-head-gribou-rc-hand.svg') no-repeat 50% 50%;
+background : rgba(0,0,0,0.6) url('../img/misc/logo-head-gribou-rc-hand.svg') no-repeat 50% 50%;
 /*background-size:30% 30%;*/
 top : 0px;
 left : 0px;
