--- a/FlOpEDT/base/templates/base/module_description.html
+++ b/FlOpEDT/base/templates/base/module_description.html
@@ -28,7 +28,7 @@
 
 {% block content %}
 
-<link rel="stylesheet" href="{% static 'base/description.css' %}" />
+<link rel="stylesheet" href="{% static 'base/css/description.css' %}" />
 
 {% if user.is_tutor %}
 <div class="description-container">
