--- a/FlOpEDT/base/templates/base/modules.html
+++ b/FlOpEDT/base/templates/base/modules.html
@@ -31,8 +31,8 @@
     var url_modules_desc = "{% url "base:module_description" department module %}";
 
     </script>
-<link rel="stylesheet" href="{% static "base/better.css" %}"/>
-<link rel="stylesheet" href="{% static "base/style-modules.css" %}"/>
+<link rel="stylesheet" href="{% static "base/css/better.css" %}"/>
+<link rel="stylesheet" href="{% static "base/css/style-modules.css" %}"/>
 
 
 <div class="appbar">
