--- a/FlOpEDT/base/templates/base/room_preference.html
+++ b/FlOpEDT/base/templates/base/room_preference.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'base/room_preference.css' %}" />
+<link rel="stylesheet" href="{% static 'base/css/room_preference.css' %}" />
 <html>
   <body>
     <div id="main-container">
