--- a/FlOpEDT/people/templates/people/login.html
+++ b/FlOpEDT/people/templates/people/login.html
@@ -26,7 +26,7 @@
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static "base/better.css" %}"/>
+<link rel="stylesheet" href="{% static "base/css/better.css" %}"/>
 <script>
   var url_add = "{% url 'people:add_redirect' '' %}" ;
 </script>
