--- a/FlOpEDT/templates/base.html
+++ b/FlOpEDT/templates/base.html
@@ -30,7 +30,7 @@
 <head>
 <style>
 </style>
-<link rel="stylesheet" href="{% static 'base/header.css' %}?2" />
+<link rel="stylesheet" href="{% static 'base/css/header.css' %}?2" />
 <link rel="stylesheet" href="{% static 'TTapp/styles.css' %}" />
 <link rel="apple-touch-icon" sizes="180x180" href=" /static/base/img/favicons/apple-touch-icon.png?v=5AeyQYqgW7">
 <link rel="icon" type="image/png" sizes="32x32" href=" /static/base/img/favicons/favicon-32x32.png?v=5AeyQYqgW7">
@@ -42,11 +42,11 @@
 <meta name="msapplication-TileColor" content="#048c04">
 <meta name="theme-color" content="#000000">
 {% block jquery %}
-<script src="{% static 'base/jquery.min.js' %}"></script>
+<script src="{% static 'base/lib/jquery.min.js' %}"></script>
 {% endblock %}
-<script src="{% static 'base/d3.v4.min.js' %}"></script>
-<script src="{% static 'base/loader.js' %}"></script>
-<script>var url_logo = "{% static 'base/logo-clock.svg' %}";</script>
+<script src="{% static 'base/lib/d3.v4.min.js' %}"></script>
+<script src="{% static 'base/shared/loader.js' %}"></script>
+<script>var url_logo = "{% static 'base/img/misc/logo-clock.svg' %}";</script>
 <!-- script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script -->
 <title>{% block title %}{% trans "Schedule_title" %}{% endblock %}</title>
 </head>
@@ -67,7 +67,7 @@
       <span id="head_logo"></span>
       {% endautoescape %}
       <a id="agpl" target="_blank" href="https://framagit.org/flopedt/flopedt">
-	      <img src="{% static 'base/agplv3-88x31.png'%}" height="31" width="88" alt="AGPL v.3"/>
+	      <img src="{% static 'base/img/misc/agplv3-88x31.png'%}" height="31" width="88" alt="AGPL v.3"/>
       </a>
     </div>
 
