--- a/FlOpEDT/base/templates/base/edt-base.html
+++ b/FlOpEDT/base/templates/base/edt-base.html
@@ -30,8 +30,8 @@
 
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'base/better.css' %}?7" />
-<script src="{% static 'base/d3.v4.min.js' %}"></script>
+<link rel="stylesheet" href="{% static 'base/css/better.css' %}?7" />
+<script src="{% static 'base/lib/d3.v4.min.js' %}"></script>
 <script>
     var groupes_fi = "{% url "base:fetch_groups" department %}";
     var rooms_fi = "{% url "base:fetch_rooms" department %}";
@@ -107,10 +107,10 @@
 
 <script type='text/javascript' src="{% static 'base/helpers.js' %}"></script>
 <script type='text/javascript' src="{% static 'TTapp/side_panel.js' %}"></script>
-<script type='text/javascript' src="{% static 'base/days.js' %}"></script>
-<script type='text/javascript' src="{% static 'base/weeks.js' %}"></script>
-<script type='text/javascript' src="{% static 'base/hours.js' %}"></script>
-<script type='text/javascript' src="{% static 'base/svg.js' %}"></script>
+<script type='text/javascript' src="{% static 'base/modules/days.js' %}"></script>
+<script type='text/javascript' src="{% static 'base/modules/weeks.js' %}"></script>
+<script type='text/javascript' src="{% static 'base/modules/hours.js' %}"></script>
+<script type='text/javascript' src="{% static 'base/modules/svg.js' %}"></script>
 <script type='text/javascript' src="{% static 'base/variables.js' %}?9"></script>
 <script type='text/javascript' src="{% static 'base/intervals.js' %}?7"></script>
 <script type='text/javascript' src="{% static 'base/week_change.js' %}?7"></script>
