--- a/FlOpEDT/base/templates/base/show-decale.html
+++ b/FlOpEDT/base/templates/base/show-decale.html
@@ -30,8 +30,8 @@
 {% block title %} EDT {% endblock %}
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static "base/better.css" %}"/>
-  <script src="{% static "base/d3.v4.min.js" %}"></script>
+<link rel="stylesheet" href="{% static "base/css/better.css" %}"/>
+  <script src="{% static "base/lib/d3.v4.min.js" %}"></script>
   <script src="{% static "base/week_change.js" %}"></script>
   <script>
     var url_fetch_decale = "{% url "base:fetch_decale" department %}"; 
