--- a/FlOpEDT/base/templates/base/show-edt-light.html
+++ b/FlOpEDT/base/templates/base/show-edt-light.html
@@ -54,6 +54,6 @@
 {% block logo %}
 {% endblock %}
 {% block jquery %}
-<script src="{% static 'base/jquery-1.12.4.min.js' %}"></script>
+<script src="{% static 'base/lib/jquery-1.12.4.min.js' %}"></script>
 <meta http-equiv="refresh" content="120">
 {% endblock %}
