--- a/FlOpEDT/base/templates/base/show-stype.html
+++ b/FlOpEDT/base/templates/base/show-stype.html
@@ -31,8 +31,8 @@
 {% block title %} EDT {% endblock %}
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'base/better.css' %}"/>
-  <script src="{% static 'base/d3.v4.min.js' %}"></script>
+<link rel="stylesheet" href="{% static 'base/css/better.css' %}"/>
+  <script src="{% static 'base/lib/d3.v4.min.js' %}"></script>
   <!-- script src="https://d3js.org/d3.v4.min.js"></script -->
   <script>
     var cosmo = JSON.parse("{{ cosmo | lower }}") ;
@@ -142,10 +142,10 @@
 </div>
 </body>
 <script type='text/javascript' src="{% static 'base/helpers.js' %}"></script>
-<script type='text/javascript' src="{% static 'base/days.js' %}"></script>
-<script type='text/javascript' src="{% static 'base/weeks.js' %}"></script>
-<script type='text/javascript' src="{% static 'base/hours.js' %}"></script>
-<script type='text/javascript' src="{% static 'base/svg.js' %}"></script>
+<script type='text/javascript' src="{% static 'base/modules/days.js' %}"></script>
+<script type='text/javascript' src="{% static 'base/modules/weeks.js' %}"></script>
+<script type='text/javascript' src="{% static 'base/modules/hours.js' %}"></script>
+<script type='text/javascript' src="{% static 'base/modules/svg.js' %}"></script>
 <script type='text/javascript' src="{% static 'base/intervals.js' %}"></script>
 <script type='text/javascript' src="{% static 'base/week_change.js' %}"></script>
 <script type='text/javascript' src="{% static 'base/transformation.js' %}"></script>
