--- a/FlOpEDT/base/templates/base/statistics.html
+++ b/FlOpEDT/base/templates/base/statistics.html
@@ -74,8 +74,8 @@
 
 {% block script_variable %}
 
-<link rel="stylesheet" href="{% static 'base/better.css' %}?2" />
-<script src="{% static 'base/d3.v4.min.js' %}"></script>
+<link rel="stylesheet" href="{% static 'base/css/better.css' %}?2" />
+<script src="{% static 'base/lib/d3.v4.min.js' %}"></script>
 <script>
     var statistics_urls = {
         room_activity: "{% url "base:room_activity" department %}",
