--- a/FlOpEDT/easter_egg/templates/easter_egg/game.html
+++ b/FlOpEDT/easter_egg/templates/easter_egg/game.html
@@ -7,8 +7,8 @@
     <title>FlOppy Bird</title>
     <link rel="stylesheet" href="{% static 'easter_egg/style.css' %}" />
     <script type='text/javascript' src="{% static 'easter_egg/phaser.js' %}"></script>
-    <script src="{% static 'base/jquery.min.js' %}"></script>
-    <script src="{% static 'base/d3.v4.min.js' %}"></script>
+    <script src="{% static 'base/lib/jquery.min.js' %}"></script>
+    <script src="{% static 'base/lib/d3.v4.min.js' %}"></script>
 </head>
 <script>
   var csrftoken = '{{ csrf_token }}';
