--- a/FlOpEDT/people/templates/people/password_change_done.html
+++ b/FlOpEDT/people/templates/people/password_change_done.html
@@ -29,6 +29,6 @@ Mot de passe oublié
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static "base/better.css" %}"/>
+<link rel="stylesheet" href="{% static "base/css/better.css" %}"/>
 <p>Mot de passe changé !</p>
 {% endblock %}
