--- a/FlOpEDT/people/templates/people/password_change_form.html
+++ b/FlOpEDT/people/templates/people/password_change_form.html
@@ -29,7 +29,7 @@ Mot de passe oublié
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static "base/better.css" %}"/>
+<link rel="stylesheet" href="{% static "base/css/better.css" %}"/>
 
 <h1>Changement de mot de passe</h1>
   <form method="POST">
