--- a/FlOpEDT/people/templates/people/password_reset_complete.html
+++ b/FlOpEDT/people/templates/people/password_reset_complete.html
@@ -29,7 +29,7 @@ Mot de passe oublié
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static "base/better.css" %}"/>
+<link rel="stylesheet" href="{% static "base/css/better.css" %}"/>
     <p>
       Le mot de passe a été changé.<br/>
       <a href="{% url 'people:login' %}">
