--- a/FlOpEDT/people/templates/people/password_reset_done.html
+++ b/FlOpEDT/people/templates/people/password_reset_done.html
@@ -29,7 +29,7 @@ Mot de passe oublié
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static "base/better.css" %}"/>
+<link rel="stylesheet" href="{% static "base/css/better.css" %}"/>
 
 <p>Vous allez recevoir un courriel sous peu.</p>
 
