--- a/FlOpEDT/solve_board/templates/solve_board/main-board.html
+++ b/FlOpEDT/solve_board/templates/solve_board/main-board.html
@@ -29,9 +29,9 @@
 
 {% block title %} Génération {% endblock %}
 {% block content %}
-  <link rel="stylesheet" href="{% static "base/header.css" %}"/>
+  <link rel="stylesheet" href="{% static "base/css/header.css" %}"/>
   <link rel="stylesheet" href="{% static "solve_board/solve.css" %}"/>
-  <script src="{% static "base/d3.v4.min.js" %}"></script>
+  <script src="{% static "base/lib/d3.v4.min.js" %}"></script>
   <script>
     var text_all = '{{ text_all|safe }}';
     var week_list = {{ weeks|safe }};
