--- a/FlOpEDT/synchro/templates/synchro/index.html
+++ b/FlOpEDT/synchro/templates/synchro/index.html
@@ -27,7 +27,7 @@
 {% block content %}
 {% load static %}
 
-<link rel="stylesheet" href="{% static "base/better.css" %}"/>
+<link rel="stylesheet" href="{% static "base/css/better.css" %}"/>
 
 <div id="tools-main" style="padding:10px;">
 
