API : Create week views

--- a/FlOpEDT/base/templates/base/edt-base.html
+++ b/FlOpEDT/base/templates/base/edt-base.html
@@ -48,7 +48,7 @@
     var url_quote = "{% url 'api:extra:random-quote-list' %}";
 
     var url_cours_pp = "{% url 'api:fetch:unscheduledcourses-list' %}";
-    var url_weekdays = "{% url 'api:fetch:weekdays-list' %}";
+    var url_weekdays = "{% url 'api:fetch:week-days' %}";
 
     // Redirection
     var url_contact = "{% url "base:contact" department %}";
